k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: harishdell/els-ai-auth-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4101
          readinessProbe:
            httpGet:
              path: /health
              port: 4101
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4101
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: els-ai
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 4101
      targetPort: 4101
