k8s/media-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: harishdell/els-ai-media-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
          readinessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: els-ai
spec:
  selector:
    app: media-service
  ports:
    - name: http
      port: 4004
      targetPort: 4004
