k8s/quiz-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-service
  template:
    metadata:
      labels:
        app: quiz-service
    spec:
      containers:
        - name: quiz-service
          image: harishdell/els-ai-quiz-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
  namespace: els-ai
spec:
  selector:
    app: quiz-service
  ports:
    - name: http
      port: 4002
      targetPort: 4002
